<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:text="InfoApp"
        android:textColor="#FFF"
        android:textSize="40sp"
        android:background="#F06000"
        android:paddingStart="10dp"/>

    <ScrollView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_lan1"
                    android:layout_gravity="center"/>
                <TextView
                    android:paddingStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/lan1"
                    android:textSize="25sp"
                    android:gravity="center|start"/>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_lan2"
                    android:layout_gravity="center"/>
                <TextView
                    android:paddingStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/lan2"
                    android:textSize="25sp"
                    android:gravity="center|start"/>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_lan3"
                    android:layout_gravity="center"/>
                <TextView
                    android:paddingStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/lan3"
                    android:textSize="25sp"
                    android:gravity="center|start"/>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_lan4"
                    android:layout_gravity="center"/>
                <TextView
                    android:paddingStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/lan4"
                    android:textSize="25sp"
                    android:gravity="center|start"/>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_lan5"
                    android:layout_gravity="center"/>
                <TextView
                    android:paddingStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/lan5"
                    android:textSize="25sp"
                    android:gravity="center|start"/>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_lan6"
                    android:layout_gravity="center"/>
                <TextView
                    android:paddingStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/lan6"
                    android:textSize="25sp"
                    android:gravity="center|start"/>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_lan7"
                    android:layout_gravity="center"/>
                <TextView
                    android:paddingStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/lan7"
                    android:textSize="25sp"
                    android:gravity="center|start"/>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_lan8"
                    android:layout_gravity="center"/>
                <TextView
                    android:paddingStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/lan8"
                    android:textSize="25sp"
                    android:gravity="center|start"/>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_lan9"
                android:layout_gravity="center"/>
            <TextView
                android:paddingStart="15dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/lan9"
                android:textSize="25sp"
                android:gravity="center|start"/>
        </LinearLayout>
            <LinearLayout
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_lan10"
                    android:layout_gravity="center"/>
                <TextView
                    android:paddingStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/lan10"
                    android:textSize="25sp"
                    android:gravity="center|start"/>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_lan11"
                android:layout_gravity="center"/>
            <TextView
                android:paddingStart="15dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/lan11"
                android:textSize="25sp"
                android:gravity="center|start"/>
        </LinearLayout>
            <LinearLayout
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_lan12"
                    android:layout_gravity="center"/>
                <TextView
                    android:paddingStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/lan12"
                    android:textSize="25sp"
                    android:gravity="center|start"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>